Small refactoring and added tests